<resources>
    <string name="app_name">FunnyLearny</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ui_label_lessons">Lessons</string>
    <string name="ui_label_parts">Parts</string>
    <string name="ui_label_quiz">Quiz</string>
    <string name="ui_label_matchPairs">MatchPairs</string>
    <string name="ui_label_true_or_false_question">TrueOrFalseQuestion</string>
    <string name="ui_label_result">Result</string>
    <string name="ui_label_font">Font</string>
    <string name="ui_label_themes_colors">Themes And Colors</string>
    <string name="ui_label_arrange_words">Arrange Words</string>
    <string name="ui_label_sentencer">Sentencer</string>
    <string name="ui_label_meaning_contest">Meaning Contest</string>
    <string name="check_now">CheckNow</string>
    <string name="submit">Submit</string>
    <string name="waiting">Waiting.....</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="reason_text">Your answer is Wrong. Reason is</string>
    <string name="next_button">Next</string>
    <string name="result_reason">Reason</string>
    <string name="header_questions">Question</string>
    <string name="header_answer">Answer</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="initial_score" formatted="true">Score : %1s</string>
    <string name="player_one_correct_answer">Chosen Correct Answer.</string>
    <string name="player_one_wrong_answer">Chosen Wrong Answer.</string>
    <string name="player_two_correct_answer">Chosen Correct Answer.</string>
    <string name="player_two_wrong_answer">Chosen Wrong Answer.</string>
    <string name="start">Start</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="selected_color_set">Selected Color set</string>
    <string name="select_the_font">Select the font</string>
</resources>